// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON View renders the JSON View with correct data 1`] = `
<div>
  <div
    class="json-accordion accordion"
  >
    <div
      class="card"
    >
      <div
        class="json-accordion-header card-header"
        data-testid="json-view__accordion-header"
      >
        JSON
        <i
          class="fa fa-chevron-down"
          style="margin-left: 620px;"
        />
      </div>
      <div
        class="collapse show"
      >
        <div
          class="card-body"
          data-testid="json-view__full-data"
          id="json-text-field"
        >
          <div>
            <pre
              class="__json-pretty__"
            >
              {
  "
              <span
                class="__json-key__"
              >
                Name
              </span>
              ": 
              <span
                class="__json-string__"
              >
                "JSON VIEW TEST"
              </span>
              ,
  "
              <span
                class="__json-key__"
              >
                LongName
              </span>
              ": 
              <span
                class="__json-string__"
              >
                "long name"
              </span>
              ,
  "
              <span
                class="__json-key__"
              >
                Version
              </span>
              ": 
              <span
                class="__json-string__"
              >
                "1"
              </span>
              
}
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JSON View testing Accordion Toggle 1`] = `
<div>
  <div
    class="json-accordion accordion"
  >
    <div
      class="card"
    >
      <div
        class="json-accordion-header card-header"
        data-testid="json-view__accordion-header"
      >
        JSON
        <i
          class="fa fa-chevron-down"
          style="margin-left: 620px;"
        />
      </div>
      <div
        class="collapsing"
        style="height: 0px;"
      >
        <div
          class="card-body"
          data-testid="json-view__full-data"
          id="json-text-field"
        >
          <div>
            <pre
              class="__json-pretty__"
            >
              {
  "
              <span
                class="__json-key__"
              >
                Name
              </span>
              ": 
              <span
                class="__json-string__"
              >
                "JSON VIEW TEST"
              </span>
              ,
  "
              <span
                class="__json-key__"
              >
                LongName
              </span>
              ": 
              <span
                class="__json-string__"
              >
                "long name"
              </span>
              ,
  "
              <span
                class="__json-key__"
              >
                Version
              </span>
              ": 
              <span
                class="__json-string__"
              >
                "1"
              </span>
              
}
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
